--- a/jaeger-addon/pom.xml
+++ b/jaeger-addon/pom.xml
@@ -106,6 +106,13 @@
         <artifactId>jaeger-client</artifactId>
         <version>${version.jaeger}</version>
       </dependency>
+      
+     <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>3.11.2</version>
+        <scope>test</scope>
+     </dependency>
         
     </dependencies>
 </project>
