--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-   
-   <parent>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <parent>
         <groupId>org.seedstack.poms</groupId>
         <artifactId>parent-internal</artifactId>
         <version>4.0.2</version>
@@ -30,21 +30,17 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <seed.version>3.11.0</seed.version>
-        <logback.version>1.2.3</logback.version>
-        <assertj.version>3.12.1</assertj.version>
+        <opentracing.version>0.33.0</opentracing.version>
+        <jaeger.version>1.6.0</jaeger.version>
+        <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
+        <kotlin-stdlib-common.version>1.4.10</kotlin-stdlib-common.version>
 
-        <version.io.opentracing>0.33.0</version.io.opentracing>
-        <version.jaeger>1.6.0</version.jaeger>
+        <compatibility.skip>true</compatibility.skip>
     </properties>
 
     <build>
         <pluginManagement>
             <plugins>
-                <plugin>
-                    <groupId>org.seedstack</groupId>
-                    <artifactId>seedstack-maven-plugin</artifactId>
-                    <version>2.7.6</version>
-                </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>license-maven-plugin</artifactId>
@@ -72,7 +68,7 @@
                             <licenseMerge>Apache 2|Apache License, Version 2.0</licenseMerge>
                             <licenseMerge>Apache 2|The Apache Software License, Version 2.0</licenseMerge>
                             <licenseMerge>Apache 2|The Apache License, Version 2.0</licenseMerge>
-                            
+
                             <licenseMerge>Apache 2|Apache 2.0</licenseMerge>
                             <licenseMerge>BSD|The New BSD License</licenseMerge>
                             <licenseMerge>CDDL|Common Development and Distribution License</licenseMerge>
@@ -81,7 +77,8 @@
                             <licenseMerge>MIT|MIT License</licenseMerge>
                             <licenseMerge>MIT|MIT license</licenseMerge>
                             <licenseMerge>MIT|The MIT License</licenseMerge>
-                            <licenseMerge>IGNORED_LICENSE|GNU General Public License, version 2 (GPL2), with the classpath exception
+                            <licenseMerge>IGNORED_LICENSE|GNU General Public License, version 2 (GPL2), with the
+                                classpath exception
                             </licenseMerge>
                         </licenseMerges>
                     </configuration>
@@ -132,48 +129,30 @@
     </repositories>
 
     <dependencies>
-    
-     <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>javax.annotation-api</artifactId>
-            <version>1.3.2</version>
-        </dependency>
-       
-       <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-common</artifactId>
-            <version>1.4.10</version>
-        </dependency>
-       
-        <dependency>
-            <groupId>io.opentracing</groupId>
-            <artifactId>opentracing-api</artifactId>
-            <version>${version.io.opentracing}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.opentracing</groupId>
-            <artifactId>opentracing-noop</artifactId>
-            <version>${version.io.opentracing}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.opentracing</groupId>
-            <artifactId>opentracing-mock</artifactId>
-            <version>${version.io.opentracing}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.opentracing</groupId>
-            <artifactId>opentracing-util</artifactId>
-            <version>${version.io.opentracing}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.jaegertracing</groupId>
-            <artifactId>jaeger-client</artifactId>
-            <version>${version.jaeger}</version>
-        </dependency>
         <dependency>
             <groupId>org.seedstack.seed</groupId>
             <artifactId>seed-core</artifactId>
             <version>${seed.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.opentracing</groupId>
+            <artifactId>opentracing-api</artifactId>
+            <version>${opentracing.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jaegertracing</groupId>
+            <artifactId>jaeger-client</artifactId>
+            <version>${jaeger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>${javax.annotation-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib-common</artifactId>
+            <version>${kotlin-stdlib-common.version}</version>
         </dependency>
 
         <dependency>
@@ -194,18 +173,5 @@
             <version>${logback.version}</version>
             <scope>test</scope>
         </dependency>
-
-        
-
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>3.11.2</version>
-            <scope>test</scope>
-        </dependency>
-        
-        
-        
-
     </dependencies>
 </project>
